Implementacion con algunos CSS

--- a/Index.html
+++ b/Index.html
@@ -12,14 +12,19 @@
 <body>
     <main class="contenedor">
         <div class="contenedor-textos">
-             <h1 class="titulo">Entra ahora es tu momento</h1>
-            <h2 class="subtitulo">Aprende a crear páginas web</h2>
-            <a href="#" class="cta">Entra ahora</a>
+            <h1 class="titulo">Juntos es más barato</h1>
+            <h2 class="subtitulo">El ahorro que necesitas...</h2>
+           
         </div>
-        <div class="contenedor-imagen">
-            <img src="images/Manos.svg" alt=""    
+        <div class="botones">
+            <a href="#" class="boton">Entra ahora!</a>
+        </div>
 
+        <div class="contenedor-imagen">
+            <img src="images/ImagenPrincipal.svg" alt="" />
         </div>
+        <img src="images/VectorD.svg" alt="" class="waveDerecha" />
+        <img src="images/VectorI.svg" alt="" class="waveIzquierda" />
     </main>
 </body>
 </html>
