--- a/Index.html
+++ b/Index.html
@@ -11,20 +11,25 @@
 </head>
 <body>
     <main class="contenedor">
-        <div class="contenedor-textos">
-            <h1 class="titulo">Juntos es más barato</h1>
-            <h2 class="subtitulo">El ahorro que necesitas...</h2>
-           
+        <div class="bannerUp">
+            <div class="contenedor-textos">
+                <h1 class="titulo">Juntos es más barato</h1>
+                <h2 class="subtitulo">El ahorro que necesitas...</h2>
+
+            </div>
+
+            <div class="contenedor-imagen">
+                <img src="images/ImagenPrincipal.svg" alt="" />
+            </div>
+
+
         </div>
+        
         <div class="botones">
             <a href="#" class="boton">Entra ahora!</a>
         </div>
+        <img src="images/Cloud.svg" alt="" class="cloud" />
 
-        <div class="contenedor-imagen">
-            <img src="images/ImagenPrincipal.svg" alt="" />
-        </div>
-        <img src="images/VectorD.svg" alt="" class="waveDerecha" />
-        <img src="images/VectorI.svg" alt="" class="waveIzquierda" />
     </main>
 </body>
 </html>
