Implementacion del Header

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -21,7 +21,7 @@
                     <h1>Posi<span>Price</span></h1>
                 </div>
                 <ul class="navegador">
-                    <a href="#"><li>Inicio</li></a>
+                    <a href="Index.html"><li>Inicio</li></a>
                     <a href="Nosotros.html"><li>Nosotros</li></a>
                     <a href="#"><li>Opiniones</li></a>
 
