--- a/Nosotros.html
+++ b/Nosotros.html
@@ -31,16 +31,21 @@
         <nav>
 
         </nav>
-        <h1 class="FontNosotros">Sobre Nosotros:</h1>
-        <div class="Nosotros">
-
-            <h2 class="Descripcion">
-            Somos una Startup comprometida con nuestros usuarios, por ello tenemos como misión ser el medio más eficiente   para Proveer de productos tecnológicos con los precios más accesibles al usuario promedio. Así mismo; Nuestra visión es convertirnos en la primera opción de ventas online específicamente de productos recién lanzados al mercado.
-            </h2>
-            <div class="ctn_imgSFM">
-                <img src="images/SilverFoxMedia.png" alt="">
+        <div class="bannerUp">
+            <div class="ctn_txt">
+                <h1>Juntos es más barato</h1>
+                <h2>El ahorro que necesitas...</h2>
+            </div>
+            <div class="ctn_img">
+                <img src="images/ImagenPrincipal.svg" alt="">
             </div>
         </div>
+        <nav>
+
+        </nav>
+        <div class="bannerDown">
+            <a href="#" class="boton">Entra ahora!</a>
+        </div>n
     </main>
 
 
