About the team implementado

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -11,6 +11,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+
+
+    <!-- Fonts-->
+    <link rel="stylesheet" type="text/css" href="assets/fonts/fontawesome/font-awesome.min.css">
+    <!-- Vendors-->
+    <link rel="stylesheet" type="text/css" href="assets/vendors/boostrap/grid.css">
+
+    <!-- App & fonts-->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Open+Sans">
+    <link rel="stylesheet" type="text/css" href="assets/css/base.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/team-01.css">
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <![endif]-->
+
 </head>
 <body>
     <main>
@@ -41,6 +56,103 @@
                 <img src="images/SilverFoxMedia.png" alt="">
             </div>
         </div>
+        <!-- Section -->
+        <section class="awe-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+
+                        <!-- sec-title__module -->
+                        <div class="sec-title__module awe-text-center">
+                            <h2>Nuestro Equipo</h2>
+                            <p>"TEAM SILVERFOXMEDIA"</p>
+                        </div><!-- End / sec-title__module -->
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 ">
+
+                        <!-- team-01__module -->
+                        <div class="team-01__module">
+                            <div class="team-01__header"><img src="assets/img/team/4.jpg" alt="" /></div>
+                            <div class="team-01__body">
+                                <div class="team-01__user">
+                                    <h4 class="team-01__name">Deyvidyorch Sánchez Morales</h4><span class="team-01__work">Programador</span>
+                                </div>
+                                
+                                <div class="team-01__text">•	Estudiante de quinto ciclo de la carrera Ing. de Software en la UPC. Tiene conocimientos en MySql, Phyton, Go, Java, C++,  C#. Además, posee conocimiento básicos en redes y arquitectura de software.</div>
+                            </div>
+                        </div><!-- End / team-01__module -->
+
+                    </div>
+                    <div class="col-md-6 col-lg-4 ">
+
+                        <!-- team-01__module -->
+                        <div class="team-01__module">
+                            <div class="team-01__header"><img src="assets/img/team/6.jpg" alt="" /></div>
+                            <div class="team-01__body">
+                                <div class="team-01__user">
+                                    <h4 class="team-01__name">Diego Adrina Gómez Fajardo</h4><span class="team-01__work">Programador</span>
+                                </div>
+
+                                <div class="team-01__text">•	Estudiante de la carrera Ing. de Software en la UPC. Con conocimientos en Tecnologias de Base de datos : SQL Server, MySql; Lenguajes de Programacion : C++ , C#, Phyton y Java. Además, conocimientos básicos de Cloud en Azure y metodologías Scrum.</div>
+                            </div>
+                        </div><!-- End / team-01__module -->
+
+                    </div>
+                    <div class="col-md-6 col-lg-4 ">
+
+                        <!-- team-01__module -->
+                        <div class="team-01__module">
+                            <div class="team-01__header"><img src="assets/img/team/7.jpg" alt="" /></div>
+                            <div class="team-01__body">
+                                <div class="team-01__user">
+                                    <h4 class="team-01__name">Gerardo Josue Huerta Macedo</h4><span class="team-01__work">Programador</span>
+                                </div>
+
+                                <div class="team-01__text">•	Estudiante de la carrera de ingeniería de software con discernimiento intermedio en programación en el lenguaje c++, básico en JavaScript y HTML. Además, conocimiento intermedio en inglés, autodidacta en edición de imágenes en Photoshop y CorelDraw, también edición de videos en Camtasia Studio, Adobe Premiere.</div>
+                            </div>
+                        </div><!-- End / team-01__module -->
+
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 ">
+
+                        <!-- team-01__module -->
+                        <div class="team-01__module">
+                            <div class="team-01__header"><img src="assets/img/team/8.jpg" alt="" /></div>
+                            <div class="team-01__body">
+                                <div class="team-01__user">
+                                    <h4 class="team-01__name">Jean Percy Briceño Aparcana</h4><span class="team-01__work">Programador</span>
+                                </div>
+
+                                <div class="team-01__text">•	Estudiante de quinto ciclo de la carrera de Ingeniería de Software en la UPC. Con conocimientos en lenguajes de programación C++, SQL, Phyton. Capacidad de aprender fácil y rápido las herramientas o conceptos que se requieran en un proyecto.</div>
+                            </div>
+                        </div><!-- End / team-01__module -->
+
+                    </div>
+
+                    <div class="col-md-6 col-lg-4 ">
+
+                        <!-- team-01__module -->
+                        <div class="team-01__module">
+                            <div class="team-01__header"><img src="assets/img/team/9.jpg" alt="" /></div>
+                            <div class="team-01__body">
+                                <div class="team-01__user">
+                                    <h4 class="team-01__name">Victor Fernando Camones Ascurra</h4><span class="team-01__work">Programador</span>
+                                </div>
+
+                                <div class="team-01__text">•	Estudio la carrera de Ingeniería de Software. Tengo experiencia en este tipo de proyectos debido a los conocimientos que adquirí en cursos anteriores. Tengo conocimientos en C++ y en el desarrollo de base de datos. Me gusta aprender sobre el UX Design y todo lo que tenga que ver con el desarrollo de aplicaciones móviles. Me gusta trabajar en equipo, dar y recibir opiniones, para así poder lograr lo propuesto entre el equipo de trabajo.</div>
+                            </div>
+                        </div><!-- End / team-01__module -->
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End / Section -->
     </main>
 
 
