--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                 </div>
                 <ul class="navegador">
                     <a href="#"><li>Inicio</li></a>
-                    <a href="Nosotros.html"><li>Nosotros</li></a>
+                    <a href="nosotros.html"><li>Nosotros</li></a>
                     <a href="#"><li>Opiniones</li></a>
 
                 </ul>
@@ -50,3 +50,4 @@
 
 
 </body>
+  
