--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,53 @@
-da
+﻿<!DOCTYPE html>
+
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+
+    <link rel="stylesheet" href="Styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <main>
+
+        <div class="header">
+            <div class="inner_header">
+                <div class="logo_container">
+                    <h1>Posi<span>Price</span></h1>
+                </div>
+                <ul class="navegador">
+                    <a href="#"><li>Inicio</li></a>
+                    <a href="Nosotros.html"><li>Nosotros</li></a>
+                    <a href="#"><li>Opiniones</li></a>
+
+                </ul>
+            </div>
+        </div>
+        <nav>
+
+        </nav>
+        <div class="bannerUp">
+            <div class="ctn_txt">
+                <h1>Juntos es más barato</h1>
+                <h2>El ahorro que necesitas...</h2>
+            </div>
+            <div class="ctn_img">
+                <img src="images/ImagenPrincipal.svg" alt="">
+            </div>
+        </div>
+        <nav>
+
+        </nav>
+        <div class="bannerDown">
+            <a href="#" class="boton">Entra ahora!</a>
+        </div>n
+    </main>
+
+
+</body>
+  
